# Banker

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: logging.md  parse_input.py
src/banker/: __main__.py
src/banker/analyzer/: analyze.py
src/banker/common/: filesystem.py  locale.py  naming.py
src/banker/data/: category.py  transaction.py
src/banker/executor/: executor.py
src/banker/formatter/: html_transactions_formatter.py  month_year_formatter.py  payment_type_formatter.py
src/banker/formatter/interfaces/: transactions_formatter.py
src/banker/gui/: manager.py  open_file.py
src/banker/parser/: html_transactions_parser.py  json_categories_parser.py  payment_type_parser.py
src/banker/parser/interfaces/: categories_parser.py  transactions_parser.py
src/banker/resources/: categories.json
src/banker/writer/: excel_categories_writer.py
src/banker/writer/interfaces/: categories_writer.py
tests/banker/: conftest.py
tests/banker/analyzer/: test_analyze.py
tests/banker/common/: test_locale.py
tests/banker/data/: test_transaction.py
tests/banker/formatter/: test_html_transactions_formatter.py
tests/banker/parser/: test_html_transactions_parser.py  test_json_categories_parser.py  test_payment_type_parser.py
tests/banker/parser/test_data/: html_transactions.py  json_categories.py
